[FIXED] css responsiveness

--- a/style.css
+++ b/style.css
@@ -104,36 +104,6 @@ h5 {
     font-size: 12px;
 }
 
-.tag {
-    font-weight: lighter;
-    display: inline-block;
-    margin-bottom: 10px;
-    padding: 4px 10px;
-    white-space: nowrap;
-    color: var(--bg-color);
-    border-radius: 1rem;
-    background-color: var(--secondary-text-color);
-}
-
-.icon {
-    font-size: 12px;
-    display: inline-grid;
-}
-
-.icon i {
-    font-size: 24px;
-    margin: auto;
-    color: var(--secondary-text-color);
-}
-
-.text-bold {
-    font-weight: bold;
-}
-
-.text-muted {
-    color: var(--muted-text-color);
-}
-
 .header {
     background-color: var(--bg-color);
 }
@@ -253,6 +223,37 @@ h5 {
     color: var(--primary-color);
 }
 
+
+.tag {
+    font-weight: lighter;
+    display: inline-block;
+    margin-bottom: 10px;
+    padding: 4px 10px;
+    white-space: nowrap;
+    color: var(--bg-color);
+    border-radius: 1rem;
+    background-color: var(--secondary-text-color);
+}
+
+.icon {
+    font-size: 12px;
+    display: inline-grid;
+}
+
+.icon i {
+    font-size: 24px;
+    margin: auto;
+    color: var(--secondary-text-color);
+}
+
+.text-bold {
+    font-weight: bold;
+}
+
+.text-muted {
+    color: var(--muted-text-color);
+}
+
 @media (max-width: 600px) {
     .header .info table {
         margin: 0;
@@ -277,5 +278,14 @@ h5 {
     .column {
         flex: 0 0 100%;
         max-width: 100%;
+    }
+
+    .column:first-child {
+        margin-right: 0;
+    }
+
+    .column:last-child {
+        margin-top: 32px;
+        margin-left: 0;
     }
 }
