--- a/src/app.scss
+++ b/src/app.scss
@@ -11,6 +11,7 @@
   color: var(--primary-text-color);
   background-color: var(--bg-color);
   font-size: 16px;
+  color-scheme: dark;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
